--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,9 @@ jobs:
         python-version: '3.x'
 
     - name: Install dependencies
-      run: pip install -r backend/test_requirements.txt
+      run: pip install -r /backend/test_requirements.txt
 
     - name: Run tests
       run: |
-        pytest backend/src/test_input.py
-        pytest backend/src/test_utils.py
+        pytest /backend/src/test_input.py
+        pytest /backend/src/test_utils.py
