--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,4 @@ jobs:
       run: |
         pytest backend/src/test_input.py
         pytest backend/src/test_utils.py
+        pytest backend/src/test_integration.py
